--- a/css/less/bootstrap3/bootstrap.less
+++ b/css/less/bootstrap3/bootstrap.less
@@ -1,50 +1,50 @@
 // Core variables and mixins
-@import "variables";
-@import "mixins";
+@import "variables.less";
+@import "mixins.less";
 
-// Reset
-@import "normalize";
-@import "print";
+// Reset and dependencies
+@import "normalize.less";
+@import "print.less";
+@import "glyphicons.less";
 
 // Core CSS
-@import "scaffolding";
+@import "scaffolding.less";
 @import "type.less";
-@import "code";
-@import "grid";
-@import "tables";
-@import "forms";
-@import "buttons";
+@import "code.less";
+@import "grid.less";
+@import "tables.less";
+@import "forms.less";
+@import "buttons.less";
 
 // Components
 @import "component-animations.less";
-@import "glyphicons";
 @import "dropdowns.less";
-@import "button-groups";
-@import "input-groups";
-@import "navs";
-@import "navbar";
-@import "breadcrumbs";
-@import "pagination";
+@import "button-groups.less";
+@import "input-groups.less";
+@import "navs.less";
+@import "navbar.less";
+@import "breadcrumbs.less";
+@import "pagination.less";
 @import "pager.less";
-@import "labels";
-@import "badges";
-@import "jumbotron";
-@import "thumbnails";
-@import "alerts";
+@import "labels.less";
+@import "badges.less";
+@import "jumbotron.less";
+@import "thumbnails.less";
+@import "alerts.less";
 @import "progress-bars.less";
-@import "media";
-@import "list-group";
-@import "panels";
+@import "media.less";
+@import "list-group.less";
+@import "panels.less";
+@import "responsive-embed.less";
 @import "wells.less";
-@import "close";
+@import "close.less";
 
 // Components w/ JavaScript
-@import "modals";
-@import "tooltip";
-@import "popovers";
-@import "carousel";
+@import "modals.less";
+@import "tooltip.less";
+@import "popovers.less";
+@import "carousel.less";
 
 // Utility classes
-@import "utilities";
-@import "responsive-utilities";
-
+@import "utilities.less";
+@import "responsive-utilities.less";
