- Grosse mise à jour des commentaires de code - Ajout d'un type de champ de formulaire Time - Corrections de bugs - Ajout de scripts js pour la saisie de dates et heures

--- a/css/less/poulpe2.less
+++ b/css/less/poulpe2.less
@@ -9,6 +9,7 @@
 @import "external/slidebar";
 @import "external/bootstrap-switch";
 @import "external/pnotify";
+@import "external/bootstrap-datetimepicker";
 
 // Import des css de composants internes
 @import "internal/help";
