- Amélioration de l'affichage de certains champs

--- a/css/less/external/bootstrap-datetimepicker.less
+++ b/css/less/external/bootstrap-datetimepicker.less
@@ -95,6 +95,7 @@
         font-weight: bold;
         font-size: 1.2em;
         margin: 0;
+        margin-left: 12px;
     }
 
     button[data-action] {
