- Modification des champs de formulaire à des fin de simplification d'usage.

--- a/css/less/external/bootstrap-datetimepicker.less
+++ b/css/less/external/bootstrap-datetimepicker.less
@@ -250,7 +250,8 @@
 }
 
 .input-group {
-    &.date {
+    &.input-date,
+    &.input-time {
         .input-group-addon span {
             display: block;
             cursor: pointer;
