--- a/css/less/poulpe2.less
+++ b/css/less/poulpe2.less
@@ -1,3 +1,11 @@
+/**
+* Fichier principal
+*
+* Aucun CSS ne devrait se trouver ici, utilisez les fichiers dans le répertoire `internal`
+*
+*
+*/
+
 /** Imports **/
 @import "bootstrap3/bootstrap.less";
 
@@ -12,254 +20,11 @@
 @import "external/bootstrap-datetimepicker";
 
 // Import des css de composants internes
+@import "internal/variables";
+@import "internal/fixes";
+@import "internal/front";
 @import "internal/help";
 @import "internal/avatars";
+@import "internal/alerts";
+@import "internal/slidebar-extended";
 
-// Open Sans font
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-bold-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-bolditalic-webfont.woff') format('woff');
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-extrabold-webfont.woff') format('woff');
-  font-weight: 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-extrabolditalic-webfont.woff') format('woff');
-  font-weight: 900;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-italic-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-light-webfont.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-semibold-webfont.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/opensans-semibolditalic-webfont.woff') format('woff');
-  font-weight: 500;
-  font-style: italic;
-}
-
-
-/** Variables **/
-//== Colors
-//
-//## Gray and brand colors for use across Bootstrap.
-
-@gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              lighten(#000, 30%);   // #333
-@gray:                   #6f6f6f; // #555
-@gray-light:             lighten(#000, 60%);   // #999
-@gray-lighter:           lighten(#000, 93.5%); // #eee
-
-@brand-primary:         #6CBFEB;
-@brand-success:         #43ac6a;
-@brand-info:            #6CBFEB; //#5bc0de;
-@brand-warning:         #f0ad4e; //#f0ad4e;
-@brand-danger:          #F04124;
-
-
-//== Scaffolding
-//
-// ## Settings for some of the most global styles.
-
-//** Background color for `<body>`.
-@body-bg:               #fff;
-//** Global text color on `<body>`.
-@text-color:            lighten(#000, 50%);
-
-//** Global textual link color.
-@link-color:            @brand-primary;
-//** Link hover color set via `darken()` function.
-@link-hover-color:      darken(@link-color, 15%);
-
-
-//== Typography
-//
-//## Font, line-height, and color for body text, headings, and more.
-
-@font-family-sans-serif:  "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
-//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-@font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
-@font-family-base:        @font-family-sans-serif;
-
-@font-size-base:          17px;
-@font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
-@font-size-small:         14px; // ~12px
-
-@font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
-@font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
-@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
-@font-size-h5:            @font-size-base;
-@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
-
-//** Unit-less `line-height` for use in components like buttons.
-@line-height-base:        1.428571429; // 20/14
-//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-@line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
-
-//** By default, this inherits from the `<body>`.
-@headings-font-family:    @font-family-base;
-@headings-font-weight:    400;
-@headings-line-height:    1.1;
-@headings-color:          inherit;
-
-//** Placeholder text color
-@input-color-placeholder:        lighten(#000, 80%);
-
-/**
-* Bug entre bootstrap-switch et bootstrap3
-* @see <https://github.com/nostalgiaz/bootstrap-switch/issues/289>
-*/
-input[type="checkbox"].form-control {
-  height: auto;
-}
-
-.breadcrumb {
-  border: 1px solid @table-border-color;
-  border-radius: 3px;
-  font-size: 16px;
-  font-weight: 300;
-  text-transform: inherit;
-}
-
-/**
-* Sticky Footer
-* @from <http://ryanfait.com/html5-sticky-footer/>
-*/
-
-html, body, #wrapper{
-  height: 100%;
-}
-
-#page-content-wrapper{
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  padding-bottom: 35px;
-  margin: 0 auto -35px; /* the bottom margin is the negative value of the footer's height */
-}
-
-footer, .push {
-  height: 35px; /* '.push' must be the same height as 'footer' */
-  text-align: right;
-  padding-right: 5%;
-  font-size: @font-size-small;
-}
-
-/**
-* Logo de Poulpe2
-*/
-.logo-text{
-
-}
-
-.logo-highlight{
-  color: @brand-primary;
-}
-
-/**
-* Masquage du menu principal
-*/
-.display-main-menu{
-  color: @gray-dark;
-  font-size: 1.8em;
-  margin-top:-6px;
-  margin-right:4px;
-  margin-left:4px
-}
-
-.secondary-menu-title{
-  color: @gray-dark;
-}
-
-.menu .menu-highlight a{
-  color: @brand-primary;
-}
-
-.menu .menu-warning a{
-  color: @brand-warning;
-}
-.menu .menu-warning a:hover{
-  background-color: @brand-warning;
-  color: @text-color;
-}
-.menu .menu-danger a{
-  color: @brand-danger;
-}
-.menu .menu-danger a:hover{
-  background-color: @brand-danger;
-}
-
-/*
-* On refait les alertes
-*/
-/*@alert-warning-text:    #f0ad4e;
-@alert-warning-border:  #f0ad4e;
-@btn-warning-color:     #f0ad4e;
-@btn-warning-border:    #f0ad4e;*/
-.alert {
-  font-size: @font-size-small + 2;
-}
-.stack-bottomright .ui-pnotify-text{
-  font-size: @font-size-small;
-}
-
-/**
-* Passer un élément en inline-block
-*/
-.inline-block{
-  display: inline-block;
-}
-
-.badge{
-  vertical-align: middle;
-}
-
-/**
-* Progress bars
-*/
-.progress-bar{
-  line-height: inherit;
-}
