- Ajout d'un module d'exploration de fichiers - Changement de nom pour la méthode Fs->getFilesInDir() en Fs->getRecursiveFilesInDir()

--- a/css/less/internal/variables.less
+++ b/css/less/internal/variables.less
@@ -8,7 +8,7 @@
 @gray-dark:              lighten(#000, 30%);   // #333
 @gray:                   #6f6f6f; // #555
 @gray-light:             lighten(#000, 60%);   // #999
-@gray-lighter:           lighten(#000, 93.5%); // #eee
+@gray-lighter:           lighten(#000, 85%); // #eee
 
 @brand-primary:         #6CBFEB;
 @brand-success:         #43ac6a;
@@ -66,3 +66,10 @@
 
 //** Placeholder text color
 @input-color-placeholder:        lighten(#000, 80%);
+
+//== Type
+//
+//##
+
+//** Text muted color
+@text-muted:                  @gray-lighter;
