- Petite modification cosmétique de code - Amélioration de l'affichage du menu latéral gauche

--- a/css/less/internal/slidebar-extended.less
+++ b/css/less/internal/slidebar-extended.less
@@ -30,3 +30,14 @@
 .menu .menu-danger a:hover{
   background-color: @brand-danger;
 }
+
+.sidebar-nav li{
+  & > a{
+    padding: 2px 0px 2px 15px;
+    font-size: 0.95em;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+  }
+  &:nth-child(even) {
+    background: lighten(#000, 59%);
+  }
+}
