Bugfixes et améliorations diverses

--- a/css/less/internal/help.less
+++ b/css/less/internal/help.less
@@ -1,9 +1,19 @@
-.help-icon{
+.help-icon, .info-icon{
   color: @brand-info;
   cursor: help;
 }
 
-.warning-icon{
+.error-icon{
   color: @brand-danger;
+  cursor: help;
+}
+
+.warning-icon{
+  color: @brand-warning;
+  cursor: help;
+}
+
+.success-icon{
+  color: @brand-success;
   cursor: help;
 }
