--- a/css/less/internal/fixes.less
+++ b/css/less/internal/fixes.less
@@ -7,11 +7,14 @@ input[type="checkbox"].form-control {
 }
 
 .breadcrumb {
-  border: 1px solid @table-border-color;
+  border: 1px solid @state-info-border;
   border-radius: 3px;
   font-size: 16px;
   font-weight: 300;
   text-transform: inherit;
+  li a{
+    color: @body-bg;
+  }
 }
 
 
