--- a/css/less/internal/front.less
+++ b/css/less/internal/front.less
@@ -56,3 +56,27 @@ footer, .push {
   left: 10px; /* padding from the left side of the window */
   bottom: 10px
 }
+
+.table{
+  font-size: @font-size-base;
+}
+
+.menu-item-desc{
+  padding: 0.8em 0.5em 0 0 ;
+  &:hover{
+    cursor: help;
+  }
+}
+
+/*.content-header{
+  background-color: @link-color;
+}
+.content-header-title{
+  text-align: right;
+  a{
+    color: @body-bg;
+    &:hover{
+      color: @body-bg;
+    }
+  }
+}*/
