--- a/css/less/internal/variables.less
+++ b/css/less/internal/variables.less
@@ -73,3 +73,12 @@
 
 //** Text muted color
 @text-muted:                  @gray-lighter;
+
+//== Breadcrumbs
+//
+//##
+
+//** Breadcrumb background color
+@breadcrumb-bg:                 @brand-primary;
+//** Breadcrumb text color
+@breadcrumb-color:              @body-bg;
