Affichage de la version des modules dans le fil d'ariane

--- a/css/less/internal/front.less
+++ b/css/less/internal/front.less
@@ -86,3 +86,9 @@ footer, .push {
   padding-left: 1em;
   list-style-type: none;
 }
+
+.moduleVersion{
+  font-size: 0.8em;
+  float: right;
+  color: @gray;
+}
