--- a/css/less/internal/front.less
+++ b/css/less/internal/front.less
@@ -21,12 +21,21 @@ html, body, #wrapper{
   height: 100%;
 }
 
+#loginBody{
+  background: @body-bg url("../img/bg.jpg") no-repeat fixed;
+  color: @body-bg;
+}
+
 #page-content-wrapper{
   min-height: 100%;
   height: auto !important;
   height: 100%;
   padding-bottom: 35px;
   margin: 0 auto -35px; /* the bottom margin is the negative value of the footer's height */
+}
+
+#loginPanel{
+  background: fade(@body-bg, 50%);
 }
 
 footer, .push {
