Refonte des paramètres d'instance de Poulpe2 + installeur
* Correction d'un bug dans les ressources du serveur
* Refonte du montage des répertoires partagés sur serveurs Windows
* Correction d'un bug dans la récupération des envois de formulaires sur des tableaux vides
* Suppression du debug détaillé qui ne servait à rien
* Correction d'affichage du titre de l'instance

--- a/css/less/internal/front.less
+++ b/css/less/internal/front.less
@@ -95,6 +95,10 @@ footer, .push {
     display: inline-block;
   }
   .content-header-title{
+    width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     a{
       color: @body-bg;
     }
