Meilleure présentation des listes CSV

--- a/css/less/internal/fixes.less
+++ b/css/less/internal/fixes.less
@@ -28,3 +28,7 @@ input[type="checkbox"].form-control {
 .progress-bar{
   line-height: inherit;
 }
+
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
