--- a/css/less/internal/fixes.less
+++ b/css/less/internal/fixes.less
@@ -32,3 +32,8 @@ input[type="checkbox"].form-control {
 .table > tbody > tr > td {
   vertical-align: middle;
 }
+
+abbr[title], abbr[data-original-title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline dotted; /* 2 */
+}
