Correction d'un bug d'affichage sur les tooltips contenant des mots trop longs.

--- a/css/less/internal/fixes.less
+++ b/css/less/internal/fixes.less
@@ -37,3 +37,7 @@ abbr[title], abbr[data-original-title] {
   border-bottom: none; /* 1 */
   text-decoration: underline dotted; /* 2 */
 }
+
+.tooltip-inner {
+  word-wrap: break-word;
+}
