--- a/css/less/internal/front.less
+++ b/css/less/internal/front.less
@@ -70,6 +70,10 @@ footer, .push {
   font-size: @font-size-base;
 }
 
+.table-scrollable{
+  overflow: auto;
+}
+
 .menu-item-desc{
   padding: 0.8em 0.5em 0 0 ;
   &:hover{
