Réduction de la marge au dessus des titres

--- a/css/less/internal/fixes.less
+++ b/css/less/internal/fixes.less
@@ -33,3 +33,7 @@ abbr[title], abbr[data-original-title] {
 .tooltip-inner {
   word-wrap: break-word;
 }
+
+.page-header {
+  margin: 20px 0 24px;
+}
