Ajout d'une méthode de vérification d'url (pour savoir si on peut l'atteindre) et d'une classe d'item de menu en mode "désactivé".

--- a/css/less/internal/slidebar-extended.less
+++ b/css/less/internal/slidebar-extended.less
@@ -31,16 +31,23 @@
   }
   &.menu-warning a{
     color: @brand-warning;
-  }
-  &.menu-warning a:hover{
-    background: linear-gradient(to right, @brand-warning, transparent);
-    color: @gray-dark;
+    &:hover{
+      background: linear-gradient(to right, @brand-warning, transparent);
+      color: @gray-dark;
+    }
   }
   &.menu-danger a{
     color: @brand-danger;
+    &:hover{
+      background: linear-gradient(to right, @brand-danger, transparent);
+    }
   }
-  &.menu-danger a:hover{
-    background: linear-gradient(to right, @brand-danger, transparent);
+  &.menu-disabled a{
+    color: @gray;
+    &:hover{
+      background: linear-gradient(to right, @gray, transparent);
+      text-decoration: line-through;
+    }
   }
   &:hover{
     background: linear-gradient(to right, @link-color, transparent);
